[2025/11/27 20:37] 에이전트 페이지 2차 수정
VS Code 오류로 분할 커밋

--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,8 @@ nav a:active {
   border-color: #000000;
 }
 
-nav a.active {
+/* 점하고 콜론 주의! */
+nav a.active {  
   background: #1d4ed8;
   color: #fff;
   border-color: #1d4ed8;
