[2025/12/1 20:29] 채팅 페이지 개선
글꼴 수정
좌우정렬 추가
대화 기록에 업로드한 이미지 표시 추가(보안 문제 체크 필요?)

--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -186,6 +186,18 @@
 
 .message {
   margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.message.user {
+  align-items: flex-end;
+  text-align: right;
+}
+
+.message.assistant {
+  align-items: flex-start;
+  text-align: left;
 }
 
 .message strong {
